--- a/Views/ApplicantMbbs/Details.cshtml
+++ b/Views/ApplicantMbbs/Details.cshtml
@@ -1,10 +1,12 @@
 ﻿@model NIC.Models.ApplicantsMbb
+
 <style>
     .borderless-input {
         border: none;
         outline: none;
     }
 </style>
+
 
 
 
@@ -17,7 +19,7 @@
 <form asp-action="Details" method="post">
     <div class="row">
         <div class="col-md-4">
-            <img src="data:image/png;base64,@System.Convert.ToBase64String(@Model.PassportPhoto)" width="200" height="200" />
+            <img class="fancybox" data-fancybox="gallery1" data-caption="Image 1" src="data:image/png;base64,@System.Convert.ToBase64String(@Model.PassportPhoto)" width="200" height="200" />
             <h5>@Model.AplicantName</h5>
         </div>
         <div class="col-md-4">
@@ -251,5 +253,17 @@
         //    }
         //}
     </script>
+    <script>
+        $(document).ready(function () {
+            // Initialize fancybox for images with the 'fancybox' class
+            $('.fancybox').fancybox({
+                thumbs: {
+                    autoStart: false, // Show thumbnails automatically
+                },
+                buttons: ['zoom', 'close'], // Show zoom and close buttons only
+            });
+        });
+    </script>
+
 
 }
