--- a/Views/ApplicantMbbs/Create.cshtml
+++ b/Views/ApplicantMbbs/Create.cshtml
@@ -398,8 +398,12 @@
                 </div>
                 <div class="col-md-5">
                     <label asp-for="NeetUgScoresheet" class="control-label">Neet Ug Scoresheet</label>
-                    <input type="file" asp-for="NeetUgScoresheet" class="form-control" name="NeetUgScoresheet" />
-                    <span asp-validation-for="NeetUgScoresheet" class="text-danger"></span>
+                    <input type="file" asp-for="NeetUgScoresheet" class="form-control" name="NeetUgScoresheet" accept=".jpg, .jpeg, .png" />
+                    <br>
+                    <span id="fileSizeError" style="color: red; display: none;">File size should not exceed .</span>
+                    <span id="fileTypeError" style="color: red; display: none;">Only JPG, JPEG, and PNG files are allowed.</span>
+                    <br>
+                    
                 </div>
 
             </div>
@@ -827,6 +831,21 @@
                 }
             }
         }
+    </script>
+    <script>
+        var fileInput = document.getElementById('fileInput');
+        var fileSizeError = document.getElementById('fileSizeError');
+        var fileTypeError = document.getElementById('fileTypeError');
+        var maxSize = 100 * 1024; // 100KB
+
+        fileInput.addEventListener('change', function () {
+            var file = fileInput.files[0];
+            fileSizeError.style.display = file.size > maxSize ? 'inline' : 'none';
+
+            var validExtensions = ['.jpg', '.jpeg', '.png'];
+            var fileExtension = file.name.substring(file.name.lastIndexOf('.')).toLowerCase();
+            fileTypeError.style.display = validExtensions.indexOf(fileExtension) === -1 ? 'inline' : 'none';
+        });
     </script>
 
 
