--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -80,9 +80,9 @@
                 <h5 class="card-title">Notice Board</h5>
                 <div class="notice-board-container">
                     <ul class="notice-board-list">
-                        <li><strong>Important Announcement:</strong> The annual flu vaccination drive will begin on [date]. Make sure to get vaccinated to protect yourself and others.</li>
-                        <li><strong>Upcoming Event:</strong> Join us for a health awareness seminar on [topic] scheduled for [date] at [location]. Don't miss this opportunity to learn valuable health tips.</li>
-                        <li><strong>Medical Camp:</strong> A free medical camp will be organized on [date] at [location]. Qualified doctors will provide consultations and basic health check-ups.</li>
+                        <li><strong>Important Announcement:</strong> The annual flu vaccination drive will begin on 20th July 2023. Make sure to get vaccinated to protect yourself and others.</li>
+                        <li><strong>Upcoming Event:</strong> Join us for a health awareness seminar on First Aid scheduled for 1st August . Don't miss this opportunity to learn valuable health tips.</li>
+                        <li><strong>Medical Camp:</strong> A free medical camp will be organized on 15th July at DHS, Laitumkhrah, Shillong. Qualified doctors will provide consultations and basic health check-ups.</li>
                         <li><strong>Health Tip of the Week:</strong> Did you know that regular exercise can reduce the risk of chronic diseases? Make it a habit to engage in physical activity for at least 30 minutes every day.</li>
                         <li><strong>Community Health Drive:</strong> Join our community health drive and help promote good health practices. Contact the health department for more information.</li>
                     </ul>
