--- a/Views/Admin/EditUser.cshtml
+++ b/Views/Admin/EditUser.cshtml
@@ -25,12 +25,12 @@
             <input asp-for="UserName"  class="form-control" />
         </div>
     </div>
-    @*<div class="form-group row">
+    <div class="form-group row">
         <label asp-for="City" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <input asp-for="City"  class="form-control" />
         </div>
-    </div>*@
+    </div>
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group row">       
         <div class="col-sm-10">
@@ -48,6 +48,7 @@
                 foreach(var role in Model.Roles)
                 {
                     <h5 class="card-title">@role</h5>
+                    <br />
                 }
             }
             else
