--- a/Views/Home/Candidates.cshtml
+++ b/Views/Home/Candidates.cshtml
@@ -62,10 +62,11 @@
 <div class="dropdown">
     <button class="dropbtn">Apply For Courses.</button>
     <div class="dropdown-content">
-        @*<a href="#">ANM</a>*@
-        <a asp-controller="ANM" asp-action="Index">ANM</a>
-
-        <a href="#">GNM</a>
+       
         <a asp-controller="ApplicantMbbs" asp-action="Create">MBBS</a>
+        <a asp-controller="Home" asp-action="PageDown">ANM</a>
+
+        <a asp-controller="Home" asp-action="PageDown">GNM</a>
+        
     </div>
 </div>
