--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -244,7 +244,7 @@
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
-                                <li class="nav-item">
+                                @*<li class="nav-item">
                                     <a asp-controller="Master" asp-action="EditState" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>States</p>
@@ -270,7 +270,7 @@
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Village</p>
                                     </a>
-                                </li>
+                                </li>*@
                                 <li class="nav-item">
                                     <a asp-controller="Age" asp-action="EditAge" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
