--- a/Views/ApplicantMbbs/Details.cshtml
+++ b/Views/ApplicantMbbs/Details.cshtml
@@ -12,7 +12,7 @@
 
 
 <h1>Details</h1>
-
+<a class="btn btn-primary" asp-action="Display">Back</a>
 
 <h4>Applicants Data</h4>
 <hr />
@@ -231,29 +231,7 @@
     <script src="~/js/getfunction.js"></script>
 
 
-    <script>
-        //function openFullscreen(img) {
-
-        //    if (img.requestFullscreen) {
-        //        img.requestFullscreen();
-        //    } else if (img.webkitRequestFullscreen) { /* Safari */
-        //        img.webkitRequestFullscreen();
-        //    } else if (img.msRequestFullscreen) { /* IE11 */
-        //        img.msRequestFullscreen();
-        //    }
-        //}
-        //function openFullscreen(element) {
-        //    if (element.requestFullscreen) {
-        //        element.requestFullscreen();
-        //    } else if (element.mozRequestFullScreen) { // Firefox
-        //        element.mozRequestFullScreen();
-        //    } else if (element.webkitRequestFullscreen) { // Chrome, Safari and Opera
-        //        element.webkitRequestFullscreen();
-        //    } else if (element.msRequestFullscreen) { // IE/Edge
-        //        element.msRequestFullscreen();
-        //    }
-        //}
-    </script>
+    
     <script>
         // Get all images with the 'zoomable-image' class
         const images = document.querySelectorAll('.zoomable-image');
