--- a/Views/ApplicantMbbs/Display.cshtml
+++ b/Views/ApplicantMbbs/Display.cshtml
@@ -41,8 +41,8 @@
 
 
 
-<div class="table table-responsive">
-    <table class="table table-border table-striped" id="dataTableData">
+        <div class="table table-responsive">
+    <table class="table table-border table-striped" id="dataTableData"> 
         <thead>
             <tr>
                 <th>Id</th>
@@ -93,7 +93,7 @@
 </div>
 
 @section scripts{
-    <script src="~/js/datatable.js"></script>
+    @*<script src="~/js/datatable.js"></script>*@
     
     <script>
     $(document).ready(function () {
@@ -126,7 +126,18 @@
         }
     });
 </script>
-   
+ <script>
+        $(function () {
+                $("#dataTableData").DataTable({
+                    "responsive": true, "lengthChange": false, "autoWidth": false,
+                    "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+                }).buttons().container().appendTo('#dataTableData_wrapper .col-md-6:eq(0)');
+                
+            });
+ </script>
+       
+       
+           
 
 
 }  
