--- a/Views/Shared/_ApplicantsTablePartial.cshtml
+++ b/Views/Shared/_ApplicantsTablePartial.cshtml
@@ -4,7 +4,7 @@
     @foreach (var applicant in Model)
     {
         <tr>
-            <td id="AppId">@applicant.ApplicantId Partial</td>
+            <td id="AppId">@applicant.ApplicantId</td>
             <td>@applicant.AplicantName</td>
             <td>@applicant.AgeAsOnCutOffDate</td>
             <td>@applicant.Gender</td>
